// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one full width slice 1`] = `
<div>
  <TileR />
</div>
`;

exports[`2. lead one and one slice 1`] = `
<div>
  <div>
    <TileU />
    <TileC />
  </div>
</div>
`;

exports[`3. lead one and four slice 1`] = `
<div>
  <TileI />
  <TileJ />
  <div />
  <TileJ />
  <div />
  <TileJ />
  <div />
  <TileJ />
</div>
`;

exports[`4. lead two no pic and two 1`] = `
<div>
  <TileF />
  <div />
  <TileB />
  <div />
  <TileD />
  <div />
  <TileE />
</div>
`;

exports[`5. secondary one slice 1`] = `
<div>
  <TileA />
</div>
`;

exports[`6. secondary one and columnist slice 1`] = `
<div>
  <TileT />
  <div />
  <TileH />
</div>
`;

exports[`7. secondary four slice 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileC />
      </div>
      <div />
      <div>
        <TileC />
      </div>
    </div>
    <div />
    <div>
      <div>
        <TileC />
      </div>
      <div />
      <div>
        <TileC />
      </div>
    </div>
  </div>
</div>
`;

exports[`8. secondary one and four slice 1`] = `
<div>
  <div>
    <TheTimesLogo
      height={40}
      width={40}
    />
  </div>
  <div />
  <div>
    <div>
      <div>
        <TileN />
      </div>
    </div>
    <div />
    <div>
      <TileO />
    </div>
    <div />
    <div>
      <TileO />
    </div>
    <div />
    <div>
      <TileO />
    </div>
    <div />
    <div>
      <TileO />
    </div>
  </div>
</div>
`;

exports[`9. secondary two and two slice 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileV />
      </div>
      <div />
      <div>
        <TileV />
      </div>
    </div>
    <div />
    <div>
      <TileG />
    </div>
    <div />
    <div>
      <TileG />
    </div>
  </div>
</div>
`;

exports[`10. secondary two no pic and two slice 1`] = `
<div>
  <TileB />
  <div />
  <TileB />
  <div />
  <TileG />
  <div />
  <TileG />
</div>
`;

exports[`11. list two and six no pic slice 1`] = `
<div>
  <div>
    <div>
      <TileC />
    </div>
    <div />
    <div>
      <TileC />
    </div>
  </div>
  <div />
  <div>
    <TileL />
    <div />
  </div>
  <div>
    <TileL />
    <div />
  </div>
  <div>
    <TileL />
    <div />
  </div>
  <div>
    <TileL />
    <div />
  </div>
  <div>
    <TileL />
    <div />
  </div>
  <div>
    <TileL />
  </div>
</div>
`;

exports[`12. leaders slice 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
    />
    <div>
      <div>
         Leading Articles 
      </div>
    </div>
  </div>
  <div>
    <TileM />
    <div />
    <TileM />
    <div />
    <TileM />
  </div>
</div>
`;

exports[`13. comment lead and cartoon slice 1`] = `
<div>
  <TileP />
  <div />
  <TileQ />
</div>
`;

exports[`14. puzzle slice 1`] = `
<Link
  url="/crossword/123"
>
  <div>
    <div>
      <h3
        aria-level="3"
        role="heading"
      >
        Times Concise medium No 7881
      </h3>
    </div>
    <div>
      <Image
        aspectRatio={1.5}
        uri="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0"
      />
    </div>
  </div>
</Link>
`;
